<resources>

    <string name="app_name">O.W.L.</string>

    <!-- main activity -->
    <string name="main_header">One With Language</string>
    <string name="owl_description">Owl logo</string>
    <string-array name="main_english_interface">
        <item>Dictionary</item>
        <item>Lessons</item>
        <item>Tests</item>
        <item>Favourites</item>
        <item>Welcome!</item>
    </string-array>

    <string-array name="main_polish_interface">
        <item>Słownik</item>
        <item>Lekcje</item>
        <item>Testy</item>
        <item>Ulubione</item>
        <item>Witaj!</item>
    </string-array>

    <!-- dictionary -->
    <string-array name="dictionary_english_interface">
        <item>Dictionary</item>
        <item>Daily word</item>
        <item>Dictionary list</item>
    </string-array>

    <string-array name="dictionary_polish_interface">
        <item>Słownik</item>
        <item>Słowo dnia</item>
        <item>Lista słów</item>
    </string-array>

    <!-- dictionary detail -->
    <string name="menu_detail">Menu</string>
    <string name="dictionary_detail_title">Dictionary Item</string>
    <string name="dictionary_item_favourite">Add to favourites</string>

    <!-- favourites -->
    <string-array name="favourites_english_interface">
        <item>Favourites</item>
        <item>Words</item>
        <item>Lessons</item>
        <item>Currently you have no favourites</item>
    </string-array>

    <string-array name="favourites_polish_interface">
        <item>Ulubione</item>
        <item>Słowa</item>
        <item>Lekcje</item>
        <item>Obecnie nie masz żadnych ulubionych</item>
    </string-array>

    <!-- lessons -->
    <string-array name="lessons_english_interface">
        <item>Lessons</item>
    </string-array>
    <string-array name="lessons_polish_interface">
        <item>Lekcje</item>
    </string-array>

    <!-- tests -->
    <string-array name="tests_english_interface">
        <item>Tests</item>
        <item>Scores</item>
        <item>Currently there are no saved scores</item>
        <item>Currently there are no tests</item>
        <item>Next</item>
        <item>You completed </item>
        <item>You achieved score:</item>
        <item>Excellent!</item>
        <item>Very good!</item>
        <item>Well done!</item>
        <item>Could\'ve been worse!</item>
        <item>You have yet things to learn!</item>
        <item>You should consider checking lessons first!</item>
    </string-array>

    <string-array name="tests_polish_interface">
        <item>Testy</item>
        <item>Wyniki</item>
        <item>Obecnie nie ma zapisanych wyników</item>
        <item>Obecnie nie ma testów</item>
        <item>Dalej</item>
        <item>Ukończyłeś </item>
        <item>Osiągnąłeś wynik:</item>
        <item>Znakomicie!</item>
        <item>Bardzo dobrze!</item>
        <item>Nieźle!</item>
        <item>Mogło być gorzej!</item>
        <item>Masz trochę nauki do odrobienia!</item>
        <item>Naprawdę powinieneś sprawdzić wcześniej lekcje!</item>
    </string-array>

    <!-- navigation drawer -->
    <string name="nav_info_default">Info</string>
    <string name="nav_info_about">About us</string>
    <string-array name="navigation_english_interface">
        <item>Home</item>
        <item>Dictionary</item>
        <item>Lessons</item>
        <item>Tests</item>
        <item>Favourites</item>
        <item>Settings</item>
        <item>A language learning app</item>
    </string-array>
    <string-array name="navigation_polish_interface">
        <item>Aktywność Główna</item>
        <item>Słownik</item>
        <item>Lekcje</item>
        <item>Testy</item>
        <item>Ulubione</item>
        <item>Ustawienia</item>
        <item>Aplikacja do nauki języków</item>
    </string-array>
    <string name="nav_home">Home</string>
    <string name="nav_dictionary">Dictionary</string>
    <string name="nav_lessons">Lessons</string>
    <string name="nav_tests">Tests</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About us</string>
    <string name="nav_header_title">One With Language</string>
    <string name="nav_header_subtitle">A language learning app</string>

    <!--settings -->
    <string name="settings_first_section">App language</string>
    <string name="settings_first_section_language">Learning language</string>
    <string name="settings_learning_language_default">"german"</string>
    <string-array name="settings_language_choice_entries">
        <item>german</item>
    </string-array>
    <string-array name="settings_language_choice_entry_values">
        <item>german</item>
    </string-array>
    <string name="settings_first_section_interface_language">Interface language</string>
    <string name="settings_interface_language_default">"english"</string>
    <string-array name="settings_interface_language_choice_entries">
        <item>english</item>
        <item>polski</item>
    </string-array>
    <string-array name="settings_interface_language_choice_entry_values">
        <item>english</item>
        <item>polish</item>
    </string-array>
    <string name="settings_second_section">Saved data</string>
    <string name="update_button_header">Database content</string>
    <string name="update_button_title">Check for updates</string>
    <string name="clear_favourites_header">Saved favourite words and lessons</string>
    <string name="clear_favourites_button_title">Clear favourites</string>
    <string name="clear_scores_button_header">Saved test scores</string>
    <string name="clear_scores_button_title">Clear scores</string>
</resources>
