<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
    android:title="@string/settings_first_section">
    <ListPreference
        android:key="language_preference"
        android:title="@string/settings_first_section_language"
        android:summary="%s"
        android:entries="@array/settings_language_choice_entries"
        android:entryValues="@array/settings_language_choice_entry_values"
        android:defaultValue="0"/>
    <ListPreference
        android:key="interface_language_preference"
        android:title="@string/settings_first_section_interface_language"
        android:summary="%s"
        android:entries="@array/settings_interface_language_choice_entries"
        android:entryValues="@array/settings_interface_language_choice_entry_values"
        android:defaultValue="0"/>
</PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_second_section"></PreferenceCategory>
</PreferenceScreen>